[tool.poetry]
name = "shaun-jason"
version = "0.1.0"
description = ""
authors = ["Genesis Ivan Ilagan <ivanilagan1109@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
keyboard = "^0.13.5"
simpleaudio = "^1.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
